# NeuralMI

./: .buildinfo  .coverage  .gitignore  01_quick_estimate.py  02_importance_of_time.py  03_dimensionality.py  04_rigorous_analysis.py  05_analyzing_spike_data.py  06_continuous_processor.py  07_spike_processor.py  AGENT_HANDOFF_neuralmi_batch2_gate.md  AGENT_HANDOFF_neuralmi_upgrade.md  AGENT_TASKS.md  AUDIT_REPORT.md  CHANGELOG.md  CONCEPTS.md  CONTRIBUTING.md  DEVELOPERS_GUIDE.md  FIX_REPORT.md  Fixes_List.txt  ISSUES.md  LICENSE  NEURALMI_REFERENCE.md  README.md  TESTING.md  THEORY.html  THEORY.md  UNDER_THE_HOOD.html  UNDER_THE_HOOD.md  api_reference.html  further_reading.html  genindex.html  getting_started.html  gitignore.txt  index.html  inductive_bias_gate_job.md  neuralmi_methods_paper.tex  noise_injection_dimensionality_spec.md  objects.inv  paper.bib  (+14 more)
.claude/: launch.json
.doctrees/: THEORY.doctree  UNDER_THE_HOOD.doctree  api_reference.doctree  environment.pickle  further_reading.doctree  getting_started.doctree  index.doctree  tutorials.doctree
NeuralMI/: test_datasets.ipynb  test_final.ipynb  test_phase_1.ipynb  test_phase_2.ipynb  test_phase_3.ipynb  test_phase_4a.ipynb  test_phase_4b.ipynb  test_phase_4c.ipynb  test_phase_5a.ipynb  test_phase_6.ipynb
_modules/: index.html
_sources/: UNDER_THE_HOOD.rst.txt  api_reference.rst.txt  further_reading.rst.txt  tutorials.rst.txt
benchmarks/: vs_classical_estimators.ipynb
docs/: requirements-docs.txt
neural_mi/: __init__.py  augmentations.py  config.py  defaults.py  embeddings_io.py  exceptions.py  logger.py  results.py  run.py  smoke_test.py  utils.py  validation.py
tests/: __init__.py  conftest.py  test_amp_and_names.py  test_analysis.py  test_animate.py  test_augmentations.py  test_cnn2d.py  test_conditional.py  test_conditional_transfer_rigorous.py  test_config.py  test_data_handler.py  test_data_processors.py  test_data_validation.py  test_datasets.py  test_decoders.py  test_dimensionality.py  test_embedding_extraction.py  test_end_to_end.py  test_estimators.py  test_generators.py  test_generators_extended.py  test_integration.py  test_load_model.py  test_mixed_data.py  test_models.py  test_models_extended.py  test_multiprocessing.py  test_noise_injection.py  test_pairwise.py  test_permutation.py  test_physics_params_and_backbone.py  test_precision.py  test_pretrained_backbone.py  test_results_extended.py  test_rigorous_diagnostics.py  test_run.py  test_run_config_api.py  test_safety.py  test_shared_encoder.py  test_splitting.py  (+10 more)
tutorials/: 00_Why_and_How_MI_Estimation_Works.ipynb  01_A_First_Estimate.html  01_A_First_Estimate.ipynb  01_quick_estimate.ipynb  02_Handling_Neural_Data.html  02_Handling_Neural_Data.ipynb  02_Neural_Data_Formats.ipynb  02_importance_of_time.ipynb  02_importance_of_time.py  03_Finding_Temporal_Relationships.html  03_Finding_Temporal_Relationships.ipynb  03_Sweeps_and_Lag.ipynb  03_Temporal_Correlations_and_Splits.ipynb  03_dimensionality.ipynb  04_Bias_Correction.html  04_Sweeps.ipynb  1.py  2.py  4.py  (+28 more)
(+123 files in other folders)
