[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural_mi"
version = "2.1.0"
description = "A Python toolbox for rigorous mutual information estimation in neuroscience"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.23.0",
    "pandas>=1.4.0",
    "seaborn>=0.12.0",
    "statsmodels>=0.13.0",
    "torch>=2.0.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
# scikit-learn is used only for PCA/t-SNE in plot_embeddings().
# Install with: pip install neural_mi[sklearn]
sklearn = ["scikit-learn>=1.0.0"]
dev = [
    "ipykernel>=6.0.0",
    "myst-parser>=0.18.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "scikit-learn>=1.0.0",
]
